--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@ body {
 /* Header */
 h1 {
   margin: 0;
-  background-color: steelblue;
+  background-color: white;
   line-height: 100px;
   color: khaki;
 }
